--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -44,3 +44,15 @@ h1 {
   align-items: center;
   min-height: 380px;
 }
+
+.card-media {
+  height: 300px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  img {
+    object-fit: cover;
+    height: 100%;
+    min-width: 50%;
+  }
+}
