--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -37,6 +37,44 @@ h1 {
   .card-media img {
     object-fit: cover;
     height: 100%;
-    min-width: 50%; }
+    min-width: 50%;
+    float: left; }
+
+.cardList {
+  display: flex;
+  font-weight: bold;
+  text-align: center;
+  flex-direction: column;
+  border-style: solid;
+  margin-bottom: -3px;
+  border-color: #f4f4f4; }
+  .cardList * {
+    padding: 10px;
+    flex: 1 100%; }
+  .cardList h1 {
+    border-bottom-style: solid;
+    border-color: #f4f4f4;
+    padding: 20px;
+    margin: 5px;
+    text-align: center; }
+  .cardList .cardImage {
+    width: 150px;
+    overflow: hidden; }
+    .cardList .cardImage img {
+      object-fit: contain;
+      max-height: 33vh; }
+  .cardList .cardContainer {
+    display: flex;
+    height: 33%; }
+    .cardList .cardContainer .cardImage, .cardList .cardContainer .pAndButtons {
+      width: 50%;
+      display: inline-flex; }
+  .cardList .pAndButtons {
+    flex-direction: column; }
+  .cardList .buttons {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin: auto; }
 
 /*# sourceMappingURL=layout.css.map */
