--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,20 +1,42 @@
-.container {
-  margin: 0 auto;
-  width: 85%; }
-  .container header {
+.main-container {
+  margin: 0;
+  height: 100vh;
+  display: flex; }
+  .main-container header {
     float: left;
     position: fixed;
     width: 270px; }
-    .container header a {
+    .main-container header a {
       color: #39c;
       font-weight: bold;
       text-decoration: none; }
-      .container header a:hover {
+      .main-container header a:hover {
         color: #94c; }
-  .container .content {
-    float: right;
-    padding-bottom: 50px;
-    width: 500px; }
+  .main-container .navbar-container {
+    position: relative;
+    height: 100%;
+    width: 12%;
+    float: left; }
+    .main-container .navbar-container .logo {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 30vh;
+      float: bottom; }
+  .main-container .content-container {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    align-self: flex-end; }
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0; }
 
 h1 {
   text-align: center; }
