--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2,9 +2,10 @@ $linkhormal: #39c;
 $linkhover: #94c;
 $cardborder: #f4f4f4;
 
-.container {
-  margin: 0 auto;
-  width: 85%;
+.main-container {
+  margin: 0;
+  height: 100vh;
+  display: flex;
 
   header {
     float: left;
@@ -22,11 +23,37 @@ $cardborder: #f4f4f4;
     }
   }
 
-  .content {
-    float: right;
-    padding-bottom: 50px;
-    width: 500px;
+  .navbar-container{
+    position: relative;
+    height: 100%;
+    width: 12%;
+    float: left;
+
+    .logo{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 30vh;
+      float: bottom;
+    }
   }
+
+  .content-container {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    align-self: flex-end;
+  }
+}
+
+html,
+body{
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 h1 {
