--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -24,11 +24,11 @@ $cardborder: #f4f4f4;
   }
 
   .navbar-container {
-    position: relative;
-    height: 100%;
+    position: fixed;
+    height: 30vh;
     width: 12%;
     float: left;
-
+    bottom: 0;
     .logo {
       position: fixed;
       bottom: 0;
