--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -25,17 +25,13 @@ $cardborder: #f4f4f4;
 
   .navbar-container {
     position: fixed;
-    height: 30vh;
-    width: 12%;
     float: left;
     bottom: 0;
     .logo {
-      position: fixed;
       bottom: 0;
       left: 0;
-      width: 12%;
+      width: 100%;
       height: 30vh;
-      float: bottom;
     }
   }
 
@@ -160,4 +156,10 @@ h1 {
   width: 60%;
   float: right;
   padding-right: 8.8%;
+}
+
+.nav-bar-container{
+  display: flex;
+  flex-direction: column;
+  min-width: 200px;
 }
