--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -76,21 +76,23 @@ h1 {
 }
 
 .cardList {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+  border-radius: 2px;
+  margin: 10px auto;
   display: flex;
   font-weight: bold;
   text-align: center;
   flex-direction: column;
-  margin-bottom: -3px;
-  border-color: solid $cardborder;
+  border: solid $cardborder;
   * {
     padding: 10px;
     flex: 1 100%;
   }
 
   h1 {
-    border-bottom-style: solid;
-    border-color: $cardborder;
-    padding: 20px;
+    border-bottom: solid $cardborder;
+    padding: 20px 0 5px 0;
     margin: 5px;
     text-align: center;
   }
@@ -105,6 +107,7 @@ h1 {
     .cardImage {
       width: 150px;
       overflow: hidden;
+      justify-content: center;
       img {
         object-fit: contain;
         max-height: 33vh;
@@ -152,7 +155,7 @@ h1 {
   }
 }
 
-.cards{
+.cards {
   width: 60%;
   float: right;
   padding-right: 8.8%;
