--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -14,17 +14,13 @@
         color: #94c; }
   .main-container .navbar-container {
     position: fixed;
-    height: 30vh;
-    width: 12%;
     float: left;
     bottom: 0; }
     .main-container .navbar-container .logo {
-      position: fixed;
       bottom: 0;
       left: 0;
-      width: 12%;
-      height: 30vh;
-      float: bottom; }
+      width: 100%;
+      height: 30vh; }
   .main-container .content-container {
     position: absolute;
     top: 0;
@@ -67,7 +63,6 @@ h1 {
   font-weight: bold;
   text-align: center;
   flex-direction: column;
-  margin-bottom: -3px;
   border: solid #f4f4f4; }
   .cardList * {
     padding: 10px;
@@ -129,5 +124,19 @@ h1 {
   width: 60%;
   float: right;
   padding-right: 8.8%; }
+  .cards input {
+    width: 99.5%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+    border-radius: 2px;
+    margin: 10px auto;
+    text-align: center;
+    border: solid #f4f4f4;
+    height: 30px; }
+
+.nav-bar-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 200px; }
 
 /*# sourceMappingURL=layout.css.map */
