--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -84,7 +84,6 @@ h1 {
   font-weight: bold;
   text-align: center;
   flex-direction: column;
-  margin-bottom: -3px;
   border: solid $cardborder;
   * {
     padding: 10px;
@@ -163,6 +162,17 @@ h1 {
   width: 60%;
   float: right;
   padding-right: 8.8%;
+
+  input{
+    width: 99.5%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+    border-radius: 2px;
+    margin: 10px auto;
+    text-align: center;
+    border: solid $cardborder;
+    height: 30px;
+  }
 }
 
 .nav-bar-container{
