--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,6 +1,8 @@
 $linkhormal: #39c;
 $linkhover: #94c;
 $cardborder: #f4f4f4;
+$commentline: #c2c2c2;
+$addcomment: #a3f4b7;
 
 .main-container {
   margin: 0;
@@ -127,6 +129,54 @@ h1 {
     }
   }
 }
+
+.commentDialog{
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+  border-radius: 2px;
+  margin: 10px auto;
+  font-weight: bold;
+
+  .commentBox{
+    padding: 10px;
+    margin: 5px;
+
+    .addCommentButton{
+      background: $addcomment !important;
+      display: inline-block !important;
+    }
+
+  }
+
+  h3 {
+    border-bottom: solid $cardborder;
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+  }
+
+  .comment{
+    padding: 5px;
+    margin: 10px;
+    border: solid $cardborder;
+    .username{
+      text-align: right;
+      padding: 5px;
+    }
+    p{
+      padding: 5px;
+    }
+
+    h1{
+      border-bottom: solid $cardborder;
+      border-left: solid $cardborder;
+      border-right: solid $cardborder;
+      font-size : inherit;
+      text-align: center;
+    }
+  }
+}
+
 
 .title {
   font-size: 22px;
