--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -90,10 +90,12 @@ h1 {
     .cardList .cardContainer .buttons {
       display: flex;
       justify-content: center;
-      width: 90%;
+      flex-direction: column;
       margin: auto; }
       .cardList .cardContainer .buttons div {
-        line-height: normal; }
+        line-height: normal;
+        text-align: center;
+        padding: 5px; }
 
 .commentDialog {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
