--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -169,6 +169,17 @@ h1 {
     border: solid #f4f4f4;
     height: 30px; }
 
+.formBox {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+  border-radius: 2px;
+  margin: 10px auto;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+  border: solid #f4f4f4;
+  width: 40%; }
+
 .nav-bar-container {
   display: flex;
   flex-direction: column;
