--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -227,6 +227,18 @@ h1 {
   }
 }
 
+.formBox {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+  border-radius: 2px;
+  margin: 10px auto;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+  border: solid $cardborder;
+  width: 40%;
+}
+
 .nav-bar-container{
   display: flex;
   flex-direction: column;
