--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -5,6 +5,10 @@ $commentline: #c2c2c2;
 $addcomment: #a3f4b7;
 $logosize: 1650;
 
+.dialog-back {
+  display: none !important;
+}
+
 @media only screen and (min-width: 769px) {
   /* styles for browsers larger than 788px (larger than ipad resolution, standard version); */
   .main-container {
@@ -157,11 +161,12 @@ $logosize: 1650;
           padding: 10px auto;
           height: 100% !important;
           .cardButton {
+            padding: 5px !important;
+            height: 50px !important;
             div {
               line-height: normal;
               text-align: center;
               margin: -10px auto;
-              padding: 5px auto;
             }
           }
         }
@@ -409,7 +414,7 @@ $logosize: 1650;
     border-radius: 2px;
     margin: 10px auto;
     position: relative;
-    width: 80%;
+    width: 90%;
     display: flex;
     font-weight: bold;
     text-align: center;
@@ -453,7 +458,7 @@ $logosize: 1650;
           display: flex;
           justify-content: center;
           flex-direction: column;
-          margin: 5px, auto;
+          margin: 5px auto;
           div {
             line-height: normal;
             text-align: center;
@@ -468,7 +473,7 @@ $logosize: 1650;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
     border-radius: 2px;
-    margin: 10px auto;
+    margin: auto;
     font-weight: bold;
 
     .commentBox {
@@ -482,8 +487,8 @@ $logosize: 1650;
       .addCommentButton {
         background: $addcomment !important;
         display: inline-block !important;
+        width: 100% !important;
       }
-
     }
 
     h3 {
@@ -590,6 +595,22 @@ $logosize: 1650;
     display: flex;
     flex-direction: column;
     min-width: 200px;
+  }
+
+  .dialog-content {
+    height: 100vh !important;
+    width: 100vw !important;;
+    position: absolute !important;;
+    top: 0;
+    left: 0;
+    transform: unset !important;;
+    max-width: unset !important;;
+    .dialog-paper {
+      height: 100%;
+      .dialog-back {
+        display: inline-block !important;
+      }
+    }
   }
 
 }
