--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -5,13 +5,34 @@ $commentline: #c2c2c2;
 $addcomment: #a3f4b7;
 $logosize: 1650;
 
+// Scrollbars
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+  background: rgba(0, 0, 0, 0.61);
+  -webkit-border-radius: 100px;
+}
+
 .dialog-back {
   display: none !important;
 }
 
 .dialog-body {
   max-height: 100% !important;
-  overflow: scroll !important;
+  overflow-y: scroll !important;
 }
 
 @media only screen and (min-width: 769px) {
